--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 NEXT_PUBLIC_MQSERVER=https://app2.photooptima.com
+
 AUTH_SECRET=cSQkVMnxIcS1Xy3m3yWevfOGNQsBjskWBmDy/RfO3a0=
+
 NEXTAUTH_URL=https://app3.photooptima.com
+AUTH_TRUST_HOST=https://app3.photooptima.com
